<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/top_margin"
        app:cardCornerRadius="@dimen/rounds">

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/desc"
            android:textAlignment="center"
            android:textSize="@dimen/md_text" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mini_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_main"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/select_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin">

            </Spinner>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:text="@string/current_pollution"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:text="107.2948"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:text="@string/upcoming_prediction"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/monday"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_mon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tuesday"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_tue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wednesday"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_wed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/thursday"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_thu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Friday"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_fri"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Saturday"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_sat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/mini_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/mini_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sunday"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/tv_sun"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="100" />
                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                </LinearLayout>


            </HorizontalScrollView>

            <Button
                android:id="@+id/btnContribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check How Can You Contribute" />


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="AQI Range"
                        android:textStyle="bold" />

                    <TextView
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:background="@color/green"
                        android:padding="3dip"
                        android:text="0 - 30" />

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text="Safe" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:background="@color/yellow"
                        android:padding="3dip"
                        android:text="30 - 70" />

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text="Moderate" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:background="@color/brown"
                        android:padding="3dip"
                        android:text="70 - 100" />

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text="Unsafe" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:background="@color/red"
                        android:padding="3dip"
                        android:text="> 100" />

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text="Dangerous" />
                </TableRow>
            </TableLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:menu="@menu/menus">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>